WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75389
EnvironmentUtilities::stripValuesEndingWithString fails when the variable ends with the search value
https://bugs.webkit.org/show_bug.cgi?id=75389
Summary
EnvironmentUtilities::stripValuesEndingWithString fails when the variable end...
mitz
Reported
2011-12-30 08:50:55 PST
EnvironmentUtilities::stripValuesEndingWithString fails when the variable ends with the search value
Attachments
Fix an off-by-1 error
(1.44 KB, patch)
2011-12-30 08:52 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-12-30 08:52:11 PST
Created
attachment 120804
[details]
Fix an off-by-1 error
mitz
Comment 2
2011-12-30 09:01:42 PST
Fixed in <
http://trac.webkit.org/r103843
>.
David Harrison
Comment 3
2012-03-09 14:17:08 PST
rdar://9937748
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug