EnvironmentUtilities::stripValuesEndingWithString fails when the variable ends with the search value https://bugs.webkit.org/show_bug.cgi?id=75389

Reviewed by Anders Carlsson.

* Platform/unix/EnvironmentUtilities.cpp:
(WebKit::EnvironmentUtilities::stripValuesEndingWithString): Fixed an off-by-1 error when
examining the character after the match.



Canonical link: https://commits.webkit.org/92141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103843 268f45cc-cd09-0410-ab3c-d52691b4dbfc